# ai-memory-hub

./: .dockerignore  .gitignore  .pymarkdown.json  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Dockerfile  LICENSE  README.md  SECURITY.md  config.yaml  example.config.yaml  main.py  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bruno-integration.yml  codeql.yml  dependency-review.yml  docker-publish.yml  ollama-chromadb-tests.yml  pages.yml  pipeline.yml  real-client-mcp-smoke.yml  release-readiness.yml  storage-providers.yml  supply-chain.yml
docs/: agents.md  architecture.md  bearer_api_key_auth_plan.md  browser_extension_capture_plan.md  bruno_integration_test_plan.md  cli_implementation_plan.md  deterministic_ingestion_plan.md  e2e_ollama_github_actions_plan.md  features.md  first_release_readiness_plan.md  improvements.md  ingestion_multi_modal_plan.md  mcp_client_smoke_plan.md  mcp_plan.md  mcp_utility_compliance_plan.md  observability.md  observability_logging_telemetry_plan.md  openclaw_native_mcp_setup.md  overview.md  planned_features.md  plans.md  plugin_readiness_plan.md  prioritized_feature_plan.md  project_promotion_plan.md  project_workspace_collaboration_plan.md  real_client_mcp_smoke_plan.md  recurring_codebase_cleanup_plan.md  release_ci_gap_analysis.md  release_container_docs_plan.md  release_promotion_assets.md  release_security_scan_notes.md  repository_governance_settings.md  roadmap.md  storage_agnostic_byoa_plan.md  storage_provider_examples.md  token_budget_plan.md
docs/improvements/: advanced_memory_plan.md  client_feedback_improvement_plan.md  context_building_plan.md  conversation_grouping_plan.md  edge_case_test_coverage_plan.md  explicit_memory_save_intent_plan.md  google_oauth_connect_ui_plan.md  graph_quality_gate_plan.md  memory_quality_fact_layer_plan.md  retrieval_precision_plan.md  top_priority_mcp_result_shape.md  vector_dbs.md
examples/container/: config.yaml
examples/google-oauth-connect/: Containerfile  README.md  compose.yaml  config.yaml
examples/oauth-resource-server/: Caddyfile  README.md  config.yaml
examples/observability/: README.md  compose.yaml  config.yaml
examples/storage-providers/: README.md
examples/storage_providers/: README.md
memory/: advanced_memory.py  auth.py  cli.py  config.py  mcp_server.py  plugin_contracts.py  provider_models.py
memory/api/: __init__.py  asgi.py  connect_ui.py  server.py
memory/backend/: __init__.py  contracts.py  dry_run.py  errors.py  log_safety.py  metadata_store.py  mongodb_metadata_store.py  postgres_metadata_store.py  redaction.py  vector_store.py
memory/benchmarks/: __init__.py  cache_candidates.py  graph_quality.py  retrieval_quality.py  token_budget.py
memory/importers/: __init__.py  base.py  manual_paste.py  registry.py
memory/inference/: providers.py
memory/ingestion/: __init__.py  base_agent.py  mvp_ingestion.py  mvp_ingestion_agent.py  provider_loader.py  save_intent.py  summary_models.py  thread_models.py  tokenizer.py  validate.py
memory/interfaces/: mcp_server.py
memory/observability/: logging.py  metrics.py  privacy.py  tracing.py
memory/schema/: conversation.schema.json
memory/tools/: __init__.py  real_client_smoke.py
tests/: README.md  test_api_endpoints.py  test_base_agent.py  test_mcp_prompts.py  test_mcp_protocol.py  test_mcp_resources.py  test_mcp_tools.py  test_mvp_ingestion.py  test_mvp_ingestion_agent.py  test_storage_features.py
tools/: prepare_mkdocs.py  validate_release_version.py
(+175 files in other folders)
