[project]
name = "ai-memory-hub"
version = "0.1.0"
description = "Local-first deterministic memory ingestion hub"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "fastmcp>=2.10.6",
    "jsonschema>=4.25.1",
    "lancedb>=0.28.0",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2.4",
]
tokenizer = [
    "tiktoken>=0.13.0",
]

[project.scripts]
aim = "memory.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory"]

[dependency-groups]
dev = [
    "mcp-pytest>=0.1.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["memory"]
