[project]
name = "ai-memory-hub"
version = "0.1.0"
description = "Local-first deterministic memory ingestion hub"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "fastmcp>=3.4.2",
    "jsonschema>=4.25.1",
    "lancedb>=0.28.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
chromadb = [
    "chromadb>=1.0.0",
]
elasticsearch = [
    "elasticsearch>=8.15.0",
]
milvus = [
    "pymilvus>=2.5.0",
]
mongodb = [
    "pymongo>=4.10.1",
]
opensearch = [
    "opensearch-py>=2.7.0",
]
observability = [
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-requests>=0.64b0",
    "opentelemetry-instrumentation-psycopg>=0.50b0",
]
postgres = [
    "psycopg[binary]>=3.2.4",
]
pinecone = [
    "pinecone>=7.0.0",
]
qdrant = [
    "qdrant-client>=1.12.1",
]
redis = [
    "redis>=5.0.0",
]
tokenizer = [
    "tiktoken>=0.13.0",
]
turbopuffer = [
    "turbopuffer>=0.1.0",
]
vespa = [
    "pyvespa>=0.50.0",
]
typesense = [
    "typesense>=0.21.0",
]
weaviate = [
    "weaviate-client>=4.9.0",
]

[project.scripts]
aim = "memory.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory"]

[dependency-groups]
dev = [
    "mcp-pytest>=0.1.1",
    "pyright>=1.1.400",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["memory"]

[tool.pyright]
include = ["memory"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
